## v0.4.8:

* Added as_command_args option to attributes cli

## v0.4.7:

* Added specs
* Updated deployment to set primary host properly in classic
* Updated ssh to return classic commands properly

## v0.4.6:

* Added spec tests
* Passing logger object into Capistrano deploy
* Updated logger to accept puts from Capistrano
* Refactored deployment
* Added support for both classic & vpc deployments
* Removed unused stack_reader & stack_lister classes

## v0.4.5:

* Corrected SSL verification options

## v0.4.4:

* Set verify SSL to false for real

## v0.4.3:

* Gracefully exit if no notification settings
* Send info level notification starting message
* Set verify SSL to false

## v0.4.2:

* Upgrade to stackster v0.2.9
* Added -v to main cli options

## v0.4.1:

* Added notifier class and campfire notifications
* Added primary host env to deployment command
* Upgraded to stackster v0.2.8

## v0.4.0:

* Added support for passing updates with deploy command
* Added support for deploying updates to multiple stacks
* Updated log outputs
* Abstracted CLI into individual classes

## v0.3.7:

* Updated stackster

## v0.3.6:

* Added -l to set log level
* Change -l to -c to limit results
* Updated output of ssh command

## v0.3.5:

* Added ssh command

## v0.3.4:

* List stacks in order based on name

## v0.3.3:

* Exist if -e is not a valid environment
* Updated to version 0.2.4 of stackster

## v0.3.2:

* Improved debuging
* Added version
* Updated to version 0.2.3 of stackster

## v0.3.1:

* Fixed bug in creating new stacks

## v0.3.0:

* Updating to new ~/.simpledeploy.yml format.

    artifacts: 
      chef_repo:
        bucket_prefix: prefix_to_bucket
        domain: name_of_object
      app:
        bucket_prefix: prefix_to_bucket
        domain: name_of_object
      cookbooks:
        bucket_prefix: prefix_to_bucket

    environments:
      preprod_shared_us-west-1:
        access_key: XXX
        secret_key: YYY
        region: us-west-1